--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <br>
     <h1>Головна сторінка</h1>
 <hr size="3" noshade />
-    <td><a href="pagecats.html" class="sending">сторінка з котиками</a></td>
+    <b><a href="pagecats.html" class="sending">сторінка з котиками</a></b><br>
+    <b><a href="pagebulba.html">сторiнка з бульбую</a></b>
 <hr size="3" noshade />
 <b><a href="https://github.com/Porolilepishechka">мій гіт</a></b>
 </div>
