--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Головна сторінка</h1>
 <hr size="3" noshade />
     <b><a href="pagecats.html" class="sending">сторінка з котиками</a></b><br>
-    <b><a href="pagebulba.html">сторiнка з бульбую</a></b>
+    <b><a href="pagebulba.html" class="sending">сторiнка з бульбую</a></b>
 <hr size="3" noshade />
 <b><a href="https://github.com/Porolilepishechka">мій гіт</a></b>
 </div>
